# AutoRefl

./: CMakeLists.txt  README.md  main.cpp
cmake/: InitCmake.cmake
include/: Attr.h  AttrList.h  Base.h  BaseList.h  ElemList.h  Field.h  FieldList.h  FiledTraits.h  NamedValue.h  Refl.h  TypeInfo.h  TypeInfoBase.h  Util.h  config.h
include/detail/: Attr.inl  ElemList.h  FieldTraits.h  TypeInfoBase.inl  Util.h
src/AutoRefl/: CMakeLists.txt  Meta.cpp  Meta.h  MetaGenerator.cpp  MetaGenerator.h  TypeInfoGenerator.cpp  TypeInfoGenerator.h  main.cpp
src/EMPTY/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
